fixed header wrap issue

--- a/src/client/assets/styles.scss
+++ b/src/client/assets/styles.scss
@@ -94,6 +94,10 @@ h1, h2, h3, h4{
 	h1, h2, h3, h4, a, div, button{
 		padding: 1em;
 	}
+
+	@media screen and (max-width: 620px){
+		top: 9.5em;
+	}
 }
 
 .cog-bg{
